--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1416,7 +1416,7 @@ a {
   background: #f92c50;
 }
 .cid-tIsi3HZcCy .card4 {
-  background: #2e481a;
+  background: #9c98cf;
 }
 .cid-tIsi3HZcCy .image-wrap {
   padding-bottom: 0rem;
@@ -1483,7 +1483,7 @@ a {
   text-align: right;
 }
 .cid-tIsi3HZcCy .tag4 {
-  background: #2e481a;
+  background: #9c98cf;
   color: #ffffff;
 }
 .cid-tIsi3HZcCy .card-text3,
